books/python-other/src/examples/types/function_bool.out
function_bool.py:5: error: No return value expected
Found 1 error in 1 file (checked 1 source file)
